# lets-build-mlsys

./: .gitignore  README.md  pyproject.toml
label-studio/: Makefile
notebooks/: 000-poc-aspect-ner-and-sentiment.ipynb  001-convert-to-ner-labeled-format.ipynb  002-convert-spacy-to-iob2.ipynb  003-tutorial-with-custom-data-Copy1.ipynb  0031-evaluate-quick-sample-model.ipynb  004-test-oss-llm.ipynb  005-labeling-pipeline.ipynb  0051-analyze-llm-output.ipynb  006-holdout-evaluation-set.ipynb  007-convert-llm-output-and-label-studio-to-spacy.ipynb  008-oss-llm-output-huggingface-datasets.ipynb  009-train-oss-llm-data.ipynb  poc-aspect-ner-and-sentiment.ipynb
ollama/modelfile/: ner_aspect_review.Modelfile  ner_aspect_review_v2.Modelfile
src/convert_ner_format/: label_studio_to_spacy.py  llm_output_to_spacy.py  spacy_to_iob2.py
src/prompt/: v10.txt  v11.txt  v4.txt  v5.txt  v6.txt  v7.txt  v8.txt  v9.txt
src/utils/id/: idfy.py
src/utils/time/: timer.py
src/wrapper/: v1.py
